# GlobalHomeHealthCare

./: .gitignore  CMakeLists.txt  README.md  deploy.yml  index.html  main.cpp  package-lock.json
assets/: index-AT7dOOHe.js  index-BSzsVEKC.js  index-CG4Op0N1.js  index-Ct94XweX.js  index-D229mSZ2.css  index-D2VVSrkZ.js  index-DuVamcDr.js  index-b_43CnV3.css  index-zClxZ1og.css
docs/: 404.html  about.html  contact.html  employment.html  form.html  index.html  ourservice.html  privacy.html  resources.html  termsAndConditions.html
docs/css/: 404.css  form.css  style.css
docs/js/: fetchData.js  formHandler.js
docs/static/css/: form.css
docs/static/js/: DateAndTime.js
headers/: Application.h  Date.h  Time.h  config.h  contact.h  routesSetUp.h
include/scripts/: delete_record.py  notify.py
react-ui/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
react-ui/src/: About.tsx  App.tsx  Contact.tsx  Employment.tsx  EmploymentComp.tsx  Home.tsx  Resource.tsx  Service.tsx  ServicesSection.css  index.css  main.tsx
react-ui/src/components/: Components.tsx  Video.tsx  VidoesComponent.tsx
react-ui/src/css/: About.css  Contact.css  EmploymentComp.css  Service.css  Video.css
src/: Application.cpp  Date.cpp  Time.cpp  contact.cpp  routesSetUp.cpp
ssl/: cert.pem  key.pem
